Fix card wrapping on small screens

--- a/resources/public/application.css
+++ b/resources/public/application.css
@@ -198,15 +198,26 @@ body {
 }
 
 .m-card {
-  margin: 2px 0;
+  line-height: 11px;
   height: 25px;
-  border-radius: 3px;
+  margin: 2px 0;
   border: 1px solid #bbb;
   padding: 5px 0;
-  background: #ddd;
-  font-size: 2.1rem;
   text-align: center;
-  line-height: 11px;
+  white-space: nowrap;
+  overflow: hidden;
+  font-size: 2.1rem;
+  border-radius: 3px;
+  background: #ddd;
+}
+
+@media (max-width: 500px) {
+
+  .m-card {
+    padding: 6px 0;
+    font-size: 1.7rem;
+  }
+
 }
 
 @media (min-width: 700px) {
